--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Paulo Lucena",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1"
   }
 }
